--- a/assets/utilities.css
+++ b/assets/utilities.css
@@ -3,3 +3,38 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.debug{
+  background-color: rgba(175, 0, 0, 0.2);
+  border: 1px solid black;
+}
