--- a/assets/style.css
+++ b/assets/style.css
@@ -1,8 +1,13 @@
 /*
 HEADER
 */
+header .sony-header{
+  background-color: black;
+}
 
-
+header .sony-header img{
+  width: 100px;
+}
 
 /*
 /HEADER
@@ -14,8 +19,71 @@ HEADER
 JUMBOTRON
 */
 .jumbotron{
-  height: 600px;
+  height: 650px;
 }
+
+.jumbotron:first-of-type{
+  height: 675px;
+  background-image: url(./img/jumbo-bg.png);
+  background-position: center;
+}
+
+.jumbotron:first-of-type h2{
+  font-size: 50px;
+  font-weight: 400;
+}
+
+.jumbotron:first-of-type p{
+  font-size: 20px;
+
+}
+
 /*
 /JUMBOTRON
 */
+
+
+/*
+MAIN
+*/
+
+/* SIX-CARD */
+  .six-card-container img{
+    width: 100%;
+    border-radius: 15px;
+    margin-bottom: 15px;
+  }
+/* /SIX-CARD */
+
+/* TEXT-PS5-CONTAINER */
+.text-ps5-container span{
+  font-size: 13px;
+  font-weight: 600;
+}
+
+.text-ps5-container h2,
+.img-text-ps5-container h2{
+  font-size: 50px;
+}
+
+/* TEXT-PS5-CONTAINER */
+
+
+
+/*
+/MAIN
+*/
+
+
+
+
+
+
+
+
+
+
+
+
+
+
