--- a/assets/utilities.css
+++ b/assets/utilities.css
@@ -2,15 +2,38 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Roboto', sans-serif;
+}
+
+.ap-btn{
+  background-color:red;
+  padding: 10px 15px;
+  border-radius: 20px;
+  font-weight: 600;
 }
 
 
+/* MENU-NAV-MODIFIER */
+
+.dropdown-toggle{
+  font-size: 12px;
+  font-weight: 600;
+}
+
+.dropdown-toggle img{
+  width: 10px;
+}
+
+.dropdown-toggle span{
+  padding-right: 5px;
+}
+
+.dropdown-toggle::after{
+  display: none;
+}
 
 
-
-
-
-
+/* MENU-NAV-MODIFIER */
 
 
 
