--- a/assets/utilities.css
+++ b/assets/utilities.css
@@ -7,6 +7,7 @@
 
 ul{
   list-style: none;
+
 }
 
 .ap-btn{
@@ -24,6 +25,18 @@ ul{
 .ap-btn:hover{
   border: 2px solid #ffffff;
   outline: 4px solid #cd3d0f;
+}
+
+#log-in-btn{
+  background-color:#363636;
+  color: white;
+  padding:3px 10px;
+  margin: 0;
+}
+
+#log-in-btn:hover{
+  border: 2px solid #ffffff;
+  outline: 4px solid #363636;
 }
 
 #ps-plus-btn{
@@ -54,26 +67,60 @@ ul{
 
 /* MENU-NAV-MODIFIER */
 
+.nav-menu .nav-img{
+  width:65px ;
+}
+
+.nav-menu .nav-img-sec{
+  width:25px ;
+}
+
+.nav-menu ul{
+  margin:0;
+  padding: 0;
+}
+
+.nav-menu li{
+  font-size:17px;
+  font-weight: 500;
+  margin-right:10px;
+  cursor: pointer;
+} 
+
+.chevron-act,
+.chevron-norm{
+  width: 7px;
+  cursor: pointer;
+  margin-left: 5px;
+}
+
+.chevron-act{
+  display: none;
+}
+
+.nav-menu li:hover{
+  color: #0d6efd;
+} 
+
+.nav-menu li:hover .chevron-norm{
+  display: none;
+}
+
+.nav-menu li:hover .chevron-act{
+  display: inline-block;
+}
+
+.ham-nav img{
+  margin-right: 20px;
+  width: 65px
+}
+
+
+
 /* MENU-NAV-MODIFIER */
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="d-none d-lg-block col-lg-6  lh-lg">
-
-
-<div class="d-none d-lg-block col-2 col-lg-3 offset-lg-2 lh-lg ">
 
 
 
